unpackaged/main/default/objects/litify_pm__Injury_Status__c/litify_pm__Injury_Status__c.object-meta.xml
<CustomObject>
    <label>Injury Status</label>
    <nameField>
        <displayFormat>INS-{0000}</displayFormat>
        <label>Injury Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Injury Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>