unpackaged/main/default/objects/litify_pm__Injury_Status__c/fields/litify_pm__Injury__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Injury__c</fullName>
    <label>Injury</label>
    <referenceTo>litify_pm__Injury__c</referenceTo>
    <relationshipLabel>Injury Status</relationshipLabel>
    <relationshipName>Injury_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>