unpackaged/main/default/objects/litify_pm__Injury_Status__c/fields/litify_pm__Injury_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Injury_Status__c</fullName>
    <label>Injury Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Treating</fullName>
                <default>true</default>
                <label>Not Treating</label>
            </value>
            <value>
                <fullName>Treating</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>