unpackaged/main/default/objects/litify_pm__Injury_Status__c/fields/litify_pm__Injury_Status_as_of__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Injury_Status_as_of__c</fullName>
    <label>Injury Status as of</label>
    <type>Date</type>
</CustomField>